# engicalc

./: .gitignore  LICENSE  README.ipynb  README.md  pyproject.toml  setup.py
engicalc/: __init__.py  actions.py  assignment.py  baustoffe.py  concrete.py  conditional.py  examples.ipynb  function.py  latex.py  latexit.py  markdown.py  materials.py  name.py  numeric.py  output copy 2.py  output.py  output1.py  parsing.py  render.py  subs.py  substitutes.py  substitution.py  sympify.py  test.ipynb  units.py
engicalc.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
setup_new_project/: setup-new-project.py
setup_new_project/files/: template.ipynb
tests/: Functionality.ipynb  params.py  test_ai.ipynb  test_notebook.ipynb  testnotebook.ipynb
